@@ -248,6 +248,9 @@
       \item The \code{print.summary.glm()} function no longer shows summary
       statistics for the deviance residuals by default. The optional
       argument \code{show.residuals} can be used to show them if required.
+
+      \item The \code{tapply()} function now accepts a data frame as the
+      \code{X}, and allows \code{INDEX} to be a formula in that case.
     }
   }
 
